terraform/alb/alb.tf
resource "aws_lb" "ml_alb" {
  name               = "ml-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = var.subnets
}
